# HW10_Django

./: README.md  pyproject.toml
hwm10/famous_quotes/famous_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hwm10/famous_quotes/quoteapp/: forms.py  models.py  urls.py  utils.py  views.py
hwm10/famous_quotes/quoteapp/migrations/: 0001_initial.py  0002_rename_born_author_born_date_and_more.py  0003_alter_tag_name.py  0004_alter_author_description.py  0005_alter_author_description.py  0006_alter_quote_quote.py  0007_alter_quote_options.py
hwm10/famous_quotes/quoteapp/static/quoteapp/css/: styles.css
hwm10/famous_quotes/quoteapp/templates/quoteapp/: about.html  addauthor.html  addquote.html  base.html  index.html  login.html  password_reset_email.html  post.html  register.html  tag.html
