[tool.poetry]
name = "hwm10"
version = "0.1.0"
description = ""
authors = ["LevytskyiS <levytskyi.sv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
